compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/FunctionWithoutName.kt
// test.Foo
package test

interface Foo {
    fun foo(): String
    fun (): Int
}